--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,10 @@
 			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>4.1.2</version> <!-- Use the appropriate version -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
