--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,24 +6,32 @@ server:
     include-binding-errors: always
     path: /error
   port: 9010
-#  address: 192.168.1.254
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/org_meta?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/meta_org?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: subte147
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
-#          ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         use_sql_comments: true
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: soportemetacontrol@gmail.com
+    password: mublcdprtqvcndhl
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+
+
 logging:
   level:
     org.springframework.web: DEBUG
