--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,14 @@ server:
     include-binding-errors: always
     path: /error
   port: 9010
-
+#  address: 192.168.1.254
 spring:
+  thymeleaf:
+    cache: false
   datasource:
-    url: jdbc:mysql://localhost:3306/meta_org?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/org_meta?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: subte147
+    password: 1290
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -30,7 +32,10 @@ spring:
     properties.mail.smtp:
       auth: true
       starttls.enable: true
-
+  report:
+      mail: "diego.cortes@metacontrol.cl"
+      mailjefe: "diego.cortes@metacontrol.cl"
+      ejecucion: true
 
 logging:
   level:
